# Qt-base-coinflip

./: CMakeLists.txt  README.md  vcpkg.json
base/: CMakeLists.txt  bin_io_window.cpp  bin_io_window.h  bin_io_window.ui  cell_dialog.cpp  cell_dialog.h  cell_dialog.ui  class_info_window.cpp  class_info_window.h  class_info_window.ui  colrow_dialog.cpp  colrow_dialog.h  colrow_dialog.ui  combo_box_window.cpp  combo_box_window.h  combo_box_window.ui  common_ctrl_button.cpp  common_ctrl_button.h  common_ctrl_button.ui  custom_dialog_box_window.cpp  custom_dialog_box_window.h  custom_dialog_box_window.ui  datetime_timer_window.cpp  datetime_timer_window.h  datetime_timer_window.ui  dialog_window.cpp  dialog_window.h  dialog_window.ui  doc_app_form.cpp  doc_app_form.h  doc_app_form.ui  doc_form.cpp  doc_form.h  doc_form.ui  file_edit_window.cpp  file_edit_window.h  file_edit_window.ui  file_widget.cpp  file_widget.h  file_widget.ui  (+157 more)
coin_flip_games/: CMakeLists.txt  choose_level_scene.cpp  choose_level_scene.h  choose_level_scene.ui  coin_push_button.cpp  coin_push_button.h  dataconfig.cpp  dataconfig.h  img_push_button.cpp  img_push_button.h  main.cpp  main_coin_flip.cpp  main_scene.cpp  main_scene.h  main_scene.ui  play_scene.cpp  play_scene.h  play_scene.ui  ui_choose_level_scene.h  ui_main_scene.h  ui_play_scene.h
images/data/: JingXie.txt  JingXie2.txt  JingXie3.txt  well.stm
